--- a/app/styles/analysis.scss
+++ b/app/styles/analysis.scss
@@ -19,7 +19,7 @@
   &:nth-child(1),
   &:nth-child(2),
   &:nth-child(3) {
-    width: 8%;
+    width: 7%;
   }
 
   &:nth-child(4),
@@ -33,8 +33,9 @@
   }
 
   &:nth-child(9),
-  &:nth-child(10) {
-    width: 7%;
+  &:nth-child(10),
+  &:nth-child(11){
+    width: 6%;
   }
 
   &:nth-child(7) {
