--- a/app/analysis/index/template.hbs
+++ b/app/analysis/index/template.hbs
@@ -192,65 +192,36 @@
       {{/filter-sidebar}}
     {{/task-selection}}
 
-    {{#if (and (not _dataCache.length) data.isRunning)}}
-      <div class="empty">
-        {{loading-icon}}
-      </div>
-    {{else}}
-      {{#with data.lastSuccessful.value as |reports|}}
-        <div class="btn-toolbar btn-toolbar--right form-group">
-          {{#if selectedReportIds.length}}
-            <button
-              data-test-edit-selected
-              type="button"
-              class="btn btn-success"
-              {{action 'edit' selectedReportIds}}
-            >
-              Edit {{selectedReportIds.length}} selected report{{unless (eq selectedReportIds.length 1) 's'}}
-            </button>
-          {{/if}}
-          <button
-            data-test-edit-all
-            type="button"
-            class="btn"
-            title={{unless editable 'Please enable the "editable" filter to modify all entries at once.'}}
-            disabled={{unless editable 'true'}}
-            {{action 'edit'}}
-          >
-            Edit all
-          </button>
+    {{#if appliedFilters.length}}
+      {{#if (and (not _dataCache.length) data.isRunning)}}
+        <div class="empty">
+          {{loading-icon}}
         </div>
+      {{else}}
+        {{#with data.lastSuccessful.value as |reports|}}
+          <div class="btn-toolbar btn-toolbar--right form-group">
+            {{#if selectedReportIds.length}}
+              <button
+                data-test-edit-selected
+                type="button"
+                class="btn btn-success"
+                {{action 'edit' selectedReportIds}}
+              >
+                Edit {{selectedReportIds.length}} selected report{{unless (eq selectedReportIds.length 1) 's'}}
+              </button>
+            {{/if}}
+            <button
+              data-test-edit-all
+              type="button"
+              class="btn"
+              title={{unless editable 'Please enable the "editable" filter to modify all entries at once.'}}
+              disabled={{unless editable 'true'}}
+              {{action 'edit'}}
+            >
+              Edit all
+            </button>
+          </div>
 
-        <table class="table table--striped table--analysis">
-          <colgroup>
-            <col>
-            <col>
-            <col>
-            <col>
-            <col>
-            <col>
-            <col>
-            <col>
-            <col>
-            <col>
-          </colgroup>
-          <thead>
-            <tr>
-              {{#sort-header update=(action (mut ordering)) current=ordering by='user__username'}}User{{/sort-header}}
-              {{#sort-header update=(action (mut ordering)) current=ordering by='date'}}Date{{/sort-header}}
-              {{#sort-header update=(action (mut ordering)) current=ordering by='duration'}}Duration{{/sort-header}}
-              {{#sort-header update=(action (mut ordering)) current=ordering by='task__project__customer__name'}}Customer{{/sort-header}}
-              {{#sort-header update=(action (mut ordering)) current=ordering by='task__project__name'}}Project{{/sort-header}}
-              {{#sort-header update=(action (mut ordering)) current=ordering by='task__name'}}Task{{/sort-header}}
-              {{#sort-header update=(action (mut ordering)) current=ordering by='comment'}}Comment{{/sort-header}}
-              {{#sort-header update=(action (mut ordering)) current=ordering by='verified_by__username'}}Verified by{{/sort-header}}
-              <th>Review</th>
-              <th>Not billable</th>
-              <th>Billed</th>
-            </tr>
-          </thead>
-        </table>
-        {{#ember-scrollable class='analysis-scrollable-container'}}
           <table class="table table--striped table--analysis">
             <colgroup>
               <col>
@@ -263,82 +234,121 @@
               <col>
               <col>
               <col>
+            </colgroup>
+            <thead>
+              <tr>
+                {{#sort-header update=(action (mut ordering)) current=ordering by='user__username'}}User{{/sort-header}}
+                {{#sort-header update=(action (mut ordering)) current=ordering by='date'}}Date{{/sort-header}}
+                {{#sort-header update=(action (mut ordering)) current=ordering by='duration'}}Duration{{/sort-header}}
+                {{#sort-header update=(action (mut ordering)) current=ordering by='task__project__customer__name'}}Customer{{/sort-header}}
+                {{#sort-header update=(action (mut ordering)) current=ordering by='task__project__name'}}Project{{/sort-header}}
+                {{#sort-header update=(action (mut ordering)) current=ordering by='task__name'}}Task{{/sort-header}}
+                {{#sort-header update=(action (mut ordering)) current=ordering by='comment'}}Comment{{/sort-header}}
+                {{#sort-header update=(action (mut ordering)) current=ordering by='verified_by__username'}}Verified by{{/sort-header}}
+                <th>Review</th>
+                <th>Not billable</th>
+                <th>Billed</th>
+              </tr>
+            </thead>
+          </table>
+          {{#ember-scrollable class='analysis-scrollable-container'}}
+            <table class="table table--striped table--analysis">
+              <colgroup>
+                <col>
+                <col>
+                <col>
+                <col>
+                <col>
+                <col>
+                <col>
+                <col>
+                <col>
+                <col>
+                <col>
+              </colgroup>
+              <tbody>
+                {{#each reports as |report|}}
+                  <tr class="{{if (contains report.id selectedReportIds) 'selected'}} {{if (can 'edit report' report) 'pointer'}}" {{action 'selectRow' report}}>
+                    <td>{{report.user.username}}</td>
+                    <td>{{moment-format report.date 'DD.MM.YYYY'}}</td>
+                    <td>{{format-duration report.duration false}}</td>
+                    <td>{{report.task.project.customer.name}}</td>
+                    <td>{{report.task.project.name}}</td>
+                    <td>{{report.task.name}}</td>
+                    <td><span title="{{report.comment}}">{{report.comment}}</span></td>
+                    <td>{{if report.verifiedBy report.verifiedBy.username}}</td>
+                    <td>{{sy-checkmark checked=report.review}}</td>
+                    <td>{{sy-checkmark checked=report.notBillable}}</td>
+                    <td>{{sy-checkmark checked=report.billed}}</td>
+                  </tr>
+                {{/each}}
+                {{#if _canLoadMore}}
+                  <tr>
+                    <td colspan="10" class="text-center">
+                      {{#in-viewport
+                        rootSelector='analysis-scrollable-container'
+                        on-enter-viewport=(perform loadNext)
+                        on-exit-viewport=(action (mut _shouldLoadMore) false)
+                      }}
+                        Loading<span class="loading-dots"><i>.</i><i>.</i><i>.</i></span>
+                      {{/in-viewport}}
+                    </td>
+                  </tr>
+                {{/if}}
+              </tbody>
+            </table>
+          {{/ember-scrollable}}
+          <table class="table table--striped table--analysis">
+            <colgroup>
+              <col>
+              <col>
+              <col>
+              <col>
+              <col>
+              <col>
+              <col>
+              <col>
+              <col>
               <col>
             </colgroup>
-            <tbody>
-              {{#each reports as |report|}}
-                <tr class="{{if (contains report.id selectedReportIds) 'selected'}} {{if (can 'edit report' report) 'pointer'}}" {{action 'selectRow' report}}>
-                  <td>{{report.user.username}}</td>
-                  <td>{{moment-format report.date 'DD.MM.YYYY'}}</td>
-                  <td>{{format-duration report.duration false}}</td>
-                  <td>{{report.task.project.customer.name}}</td>
-                  <td>{{report.task.project.name}}</td>
-                  <td>{{report.task.name}}</td>
-                  <td><span title="{{report.comment}}">{{report.comment}}</span></td>
-                  <td>{{if report.verifiedBy report.verifiedBy.username}}</td>
-                  <td>{{sy-checkmark checked=report.review}}</td>
-                  <td>{{sy-checkmark checked=report.notBillable}}</td>
-                  <td>{{sy-checkmark checked=report.billed}}</td>
-                </tr>
-              {{/each}}
-              {{#if _canLoadMore}}
-                <tr>
-                  <td colspan="10" class="text-center">
-                    {{#in-viewport
-                      rootSelector='analysis-scrollable-container'
-                      on-enter-viewport=(perform loadNext)
-                      on-exit-viewport=(action (mut _shouldLoadMore) false)
-                    }}
-                      Loading<span class="loading-dots"><i>.</i><i>.</i><i>.</i></span>
-                    {{/in-viewport}}
-                  </td>
-                </tr>
-              {{/if}}
-            </tbody>
+            <tfoot>
+              <tr>
+                <td colspan="2"><strong>Total:</strong></td>
+                <td colspan="2"><strong class="total">{{format-duration totalTime false}}</strong></td>
+                <td colspan="6" class="text-right"><em>Displaying {{reports.length}} of {{totalItems}} reports</em></td>
+              </tr>
+            </tfoot>
           </table>
-        {{/ember-scrollable}}
-        <table class="table table--striped table--analysis">
-          <colgroup>
-            <col>
-            <col>
-            <col>
-            <col>
-            <col>
-            <col>
-            <col>
-            <col>
-            <col>
-            <col>
-          </colgroup>
-          <tfoot>
-            <tr>
-              <td colspan="2"><strong>Total:</strong></td>
-              <td colspan="2"><strong class="total">{{format-duration totalTime false}}</strong></td>
-              <td colspan="6" class="text-right"><em>Displaying {{reports.length}} of {{totalItems}} reports</em></td>
-            </tr>
-          </tfoot>
-        </table>
-        <div class="export-buttons">
-          {{#each exportLinks as |link|}}
-            <button {{action (perform download) notify allQueryParams jwt link}}
-              type="button"
-              data-download-count="{{download.performCount}}"
-              class="btn btn-primary {{if (and (eq download.last.url link.url) (eq download.last.params link.params) download.isRunning) 'loading'}}"
-              disabled={{exportLimitExceeded}}
-              title={{if exportLimitExceeded exportLimitMessage}}
-            >
-              {{fa-icon 'download'}}&nbsp;{{link.label}}
-            </button>
-          {{/each}}
-        </div>
-      {{^}}
-        <div class="empty">
-          <div>
-            {{fa-icon 'search'}}
-            <h3>Apply filters to display reports</h3>
+          <div class="export-buttons">
+            {{#each exportLinks as |link|}}
+              <button {{action (perform download) notify allQueryParams jwt link}}
+                type="button"
+                data-download-count="{{download.performCount}}"
+                class="btn btn-primary {{if (and (eq download.last.url link.url) (eq download.last.params link.params) download.isRunning) 'loading'}}"
+                disabled={{exportLimitExceeded}}
+                title={{if exportLimitExceeded exportLimitMessage}}
+              >
+                {{fa-icon 'download'}}&nbsp;{{link.label}}
+              </button>
+            {{/each}}
           </div>
+        {{^}}
+          <div class="empty">
+            <div>
+              {{fa-icon 'search'}}
+              <h3>0 Results</h3>
+              <p>Maybe widen your filters</p>
+            </div>
+          </div>
+        {{/with}}
+      {{/if}}
+    {{else}}
+      <div class="empty">
+        <div>
+          {{fa-icon 'search'}}
+          <h3>Apply filters to display reports</h3>
         </div>
-      {{/with}}
+      </div>
     {{/if}}
   </PagePermission>
 {{/if}}
