feat(analysis): accountants may bill reports
This will allow accountants to bill reports on analysis-edit. All
form elements except the `billed` checkbox will be disabled
if at least 1 report has been selected that was not created by the
accountant.

--- a/app/analysis/edit/template.hbs
+++ b/app/analysis/edit/template.hbs
@@ -31,6 +31,7 @@
                     project=_project
                     task=_task
                   }}
+                  @disabled={{and this.isAccountant (not this.hasSelectedOwnReports)}}
                   as |t|
                 >
                   <f.input @name='task' as |fi|>
@@ -92,6 +93,7 @@
                       class="form-control"
                       onchange={{action fi.update value='target.value'}}
                       value={{fi.value}}
+                      disabled={{and this.isAccountant (not this.hasSelectedOwnReports)}}
                     >
                   </f.input>
 
@@ -103,6 +105,7 @@
                     <SyCheckbox
                       @checked={{fi.value}}
                       @on-change={{fi.update}}
+                      @disabled={{and this.isAccountant (not this.hasSelectedOwnReports)}}
                     >
                       Not billable
                       {{#if (eq model.notBillable null)}}
@@ -122,6 +125,7 @@
                     <SyCheckbox
                       @checked={{fi.value}}
                       @on-change={{fi.update}}
+                      @disabled={{and this.isAccountant (not this.hasSelectedOwnReports)}}
                     >
                       Needs Review
                       {{#if (eq model.review null)}}
@@ -141,7 +145,7 @@
                     <SyCheckbox
                       @checked={{fi.value}}
                       @on-change={{fi.update}}
-                      @title="You do not have appropriate roles for this action."
+                      @title={{not canBill "You do not have appropriate roles for this action."}}
                       @disabled={{not canBill}}
                     >
                       Billed
