--- a/app/analysis/index/template.hbs
+++ b/app/analysis/index/template.hbs
@@ -282,7 +282,7 @@
                   </colgroup>
                   <tbody>
                     {{#each reports as |report|}}
-                      <tr class="{{if (contains report.id this.selectedReportIds) 'selected'}} {{if (can 'edit report' report) 'pointer'}}" {{action 'selectRow' report}}>
+                      <tr class="{{if (contains report.id this.selectedReportIds) 'selected'}} {{if (or this.canBill (can 'edit report' report)) 'pointer'}}" {{action 'selectRow' report}}>
                         <td>{{report.user.username}}</td>
                         <td>{{moment-format report.date 'DD.MM.YYYY'}}</td>
                         <td>{{format-duration report.duration false}}</td>
