fix(styling): fix overlapping eye-icon in comment field added customer-visible-icon to analysis-edit

--- a/app/analysis/edit/template.hbs
+++ b/app/analysis/edit/template.hbs
@@ -89,10 +89,13 @@
                     <input
                       type="text"
                       placeholder="Enter comment..."
-                      class="form-control"
+                      class="form-control comment-field"
                       onchange={{action fi.update value='target.value'}}
                       value={{fi.value}}
                     >
+                    {{#if model.task.project.customerVisible}}
+                      <CustomerVisibleIcon class="customer-visible-icon" />
+                    {{/if}}
                   </f.input>
 
                   <f.input
