--- a/app/components/report-row/template.hbs
+++ b/app/components/report-row/template.hbs
@@ -7,7 +7,7 @@
 <div class="form-list-cell form-group">
   <input
     type="text"
-    class="form-control"
+    class="form-control comment-field"
     placeholder="Comment"
     name="comment"
     value={{changeset.comment}}
