--- a/app/index/activities/edit/template.hbs
+++ b/app/index/activities/edit/template.hbs
@@ -12,7 +12,7 @@
       <div class="form-group">
         <input
           type="text"
-          class="form-control"
+          class="form-control comment-field"
           placeholder="Comment"
           name="comment"
           value={{changeset.comment}}
