--- a/app/index/activities/template.hbs
+++ b/app/index/activities/template.hbs
@@ -44,7 +44,7 @@
                 {{/if}}
               </td>
               <td title={{activity.comment}}>
-                <div>{{activity.comment}}</div>
+                <div class="comment-field">{{activity.comment}}</div>
                 {{#if activity.task.project.customerVisible }}
                   <CustomerVisibleIcon class="activity-customer-visible-icon" />
                 {{/if}}
