--- a/app/components/timed-clock/styles.scss
+++ b/app/components/timed-clock/styles.scss
@@ -1,7 +1,7 @@
 & {
   --clock-size: 50px;
-  --clock-color: rgb(87,87,87);
-  --clock-color-secondary: rgb(217,83,79);
+  --clock-color: rgb(87, 87, 87);
+  --clock-color-secondary: rgb(217, 83, 79);
 
   width: var(--clock-size);
   height: var(--clock-size);
