--- a/app/styles/ember-power-select-custom.scss
+++ b/app/styles/ember-power-select-custom.scss
@@ -1,18 +1,15 @@
-@import 'ember-power-select';
+@import "ember-power-select";
 
 .ember-power-select-dropdown {
   min-width: 250px;
 }
 
-.ember-power-select-options[role='listbox'] {
+.ember-power-select-options[role="listbox"] {
   max-height: 425px;
   position: relative;
 }
 
-.ember-power-select-option:not(
-  .ember-power-select-option--no-matches-message):not(
-  .ember-power-select-option--loading-message
-) {
+.ember-power-select-option:not(.ember-power-select-option--no-matches-message):not(.ember-power-select-option--loading-message) {
   padding: 0;
   line-height: 1;
   div {
@@ -43,17 +40,17 @@
     }
   }
 
-  &[aria-current=true] .inactive,
-  &[aria-selected=true] .inactive {
+  &[aria-current="true"] .inactive,
+  &[aria-selected="true"] .inactive {
     background-color: transparent;
   }
 
-  &[aria-selected=true] {
+  &[aria-selected="true"] {
     background-color: $color-primary;
     color: rgb(255, 255, 255);
   }
 
-  &[aria-current=true] {
+  &[aria-current="true"] {
     background-color: opacify($color-primary, 0.6);
   }
 }
@@ -94,17 +91,17 @@
     border-color: lighten($color-primary, 20%);
     outline: 0;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset,
-                0 0   8px opacify($color-primary, 0.6);
+      0 0 8px opacify($color-primary, 0.6);
   }
 
-  &[aria-disabled=true] {
+  &[aria-disabled="true"] {
     .ember-power-select-status-icon {
       background-color: rgb(238, 238, 238);
     }
   }
 
   .ember-power-select-clear-btn {
-    background-color: rgb(255,255,255);
+    background-color: rgb(255, 255, 255);
     padding: 0 2px;
     right: 2rem;
     top: 50%;
@@ -112,7 +109,7 @@
   }
 
   .ember-power-select-status-icon {
-    background-color: rgb(255,255,255);
+    background-color: rgb(255, 255, 255);
     transform: none !important;
     width: 2rem;
     border: none;
