--- a/app/components/filter-sidebar/group/styles.scss
+++ b/app/components/filter-sidebar/group/styles.scss
@@ -24,20 +24,20 @@
   padding: 1rem;
   color: lighten($body-color, 50%);
   border-top: 1px solid $color-border;
-  transition: color .3s ease;
+  transition: color 0.3s ease;
 }
 
 .filter-sidebar-group-body {
   display: block;
   overflow: hidden;
   max-height: 0;
-  transition: max-height .3s ease;
+  transition: max-height 0.3s ease;
 }
 
 .filter-sidebar-group-content {
-  padding: .5rem 1rem;
+  padding: 0.5rem 1rem;
 }
 
 .filter-sidebar-group-label .fa {
-  transition: transform .3s ease
+  transition: transform 0.3s ease;
 }
