--- a/app/components/filter-sidebar/label/styles.scss
+++ b/app/components/filter-sidebar/label/styles.scss
@@ -1,11 +1,11 @@
 & {
   display: block;
-  font-size: .75rem;
+  font-size: 0.75rem;
   font-weight: 500;
-  padding: .5rem 0;
+  padding: 0.5rem 0;
 }
 
 > * {
   font-weight: 300;
-  margin-top: .3rem;
+  margin-top: 0.3rem;
 }
