--- a/app/components/record-button/styles.scss
+++ b/app/components/record-button/styles.scss
@@ -8,7 +8,7 @@
   background: rgb(80, 80, 80);
   border-radius: 1.5rem;
   height: 3rem;
-  width:  3rem;
+  width: 3rem;
   transition: width 500ms ease;
   font-family: $font-family-mono;
   font-size: 14px;
@@ -18,7 +18,7 @@
   position: absolute;
   top: 0.4rem;
   left: 0.4rem;
-  width:  2.2rem;
+  width: 2.2rem;
   height: 2.2rem;
   padding: 0;
   border-radius: 50%;
@@ -34,7 +34,7 @@
 .record-button::after {
   position: absolute;
   left: 50%;
-  top:  50%;
+  top: 50%;
   font-family: FontAwesome;
   font-size: 16px;
   color: $color-danger;
@@ -42,12 +42,12 @@
 }
 
 .record-button--start::after {
-  content: '\f04b';
+  content: "\f04b";
   transform: translate(-35%, -50%);
 }
 
 .record-button--stop::after {
-  content: '\f04d';
+  content: "\f04d";
   transform: translate(-50%, -50%);
 }
 
