--- a/app/components/statistic-list/bar/styles.scss
+++ b/app/components/statistic-list/bar/styles.scss
@@ -6,7 +6,7 @@
   --value: 0;
 
   &::before {
-    content: '';
+    content: "";
     display: block;
     height: 100%;
     width: 100%;
@@ -17,10 +17,12 @@
     transform: translateX(calc((1 - var(--value)) * -100%));
 
     transition: transform 0.5s cubic-bezier(0.86, 0, 0.07, 1);
-    animation:  slide-in-statistic-bar 0.5s cubic-bezier(0.86, 0, 0.07, 1);
+    animation: slide-in-statistic-bar 0.5s cubic-bezier(0.86, 0, 0.07, 1);
   }
 }
 
 @keyframes slide-in-statistic-bar {
-  0% { transform: translateX(-100%); }
+  0% {
+    transform: translateX(-100%);
+  }
 }
