--- a/app/components/sy-calendar/styles.scss
+++ b/app/components/sy-calendar/styles.scss
@@ -4,7 +4,6 @@
   .ember-power-calendar-nav-control {
     color: $color-primary;
     cursor: pointer;
-
   }
 
   .nav-select-month,
@@ -13,7 +12,10 @@
 
     select {
       position: absolute;
-      top: 0; left: 0; right: 0; bottom: 0;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
       opacity: 0;
     }
   }
@@ -27,11 +29,11 @@
     }
 
     &--selected {
-      color: rgb(255,255,255);
+      color: rgb(255, 255, 255);
       background-color: lighten($color-primary, 20%);
 
       &:hover {
-        color: rgb(255,255,255);
+        color: rgb(255, 255, 255);
         background-color: lighten($color-primary, 30%);
       }
     }
@@ -41,5 +43,5 @@
 &.sy-datepicker {
   border: 1px solid $color-border;
   padding: 0.5rem;
-  box-shadow: 2px 2px 10px rgba(0,0,0,0.2);
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
 }
