--- a/app/components/sy-checkbox/styles.scss
+++ b/app/components/sy-checkbox/styles.scss
@@ -1,6 +1,6 @@
-& > input[type=checkbox]:indeterminate + label:after {
-  content: '\2012';
+& > input[type="checkbox"]:indeterminate + label:after {
+  content: "\2012";
   opacity: 1;
   transform: scale(1);
-  left: .23rem;
+  left: 0.23rem;
 }
