--- a/app/components/sy-datepicker/styles.scss
+++ b/app/components/sy-datepicker/styles.scss
@@ -5,7 +5,7 @@ span.clear {
   position: absolute;
   right: 0;
   top: 50%;
-  padding-right: .5rem;
+  padding-right: 0.5rem;
   transform: translateY(-50%);
   cursor: pointer;
 }
