--- a/app/components/sy-topnav/styles.scss
+++ b/app/components/sy-topnav/styles.scss
@@ -4,8 +4,8 @@
 }
 
 .timed-clock {
-  padding: .3rem 0;
-  margin-right: .3rem;
+  padding: 0.3rem 0;
+  margin-right: 0.3rem;
 }
 
 @media #{$nav-top-mobile-width} {
@@ -14,8 +14,8 @@
   }
 
   .nav-top-header-title-version {
-    color: rgb(150,150,150);
-    font-size: .5rem;
+    color: rgb(150, 150, 150);
+    font-size: 0.5rem;
     font-family: $font-family-mono;
   }
 
@@ -30,7 +30,7 @@
   }
 
   .nav-top-list-item a {
-    padding: .6rem .8rem;
+    padding: 0.6rem 0.8rem;
     border-radius: 0;
   }
 }
