--- a/app/components/weekly-overview-day/styles.scss
+++ b/app/components/weekly-overview-day/styles.scss
@@ -7,7 +7,8 @@
   transition: height 300ms ease;
 }
 
-&.weekend, &.holiday {
+&.weekend,
+&.holiday {
   .bar {
     background-color: rgb(220, 220, 220);
   }
@@ -34,7 +35,7 @@
     font-weight: bold;
     padding: 0 5px 5px;
     margin-bottom: -5px;
-    border-bottom:  2px solid $color-primary;
+    border-bottom: 2px solid $color-primary;
   }
 }
 
