--- a/app/styles/badge.scss
+++ b/app/styles/badge.scss
@@ -5,7 +5,7 @@
   margin-left: 0.2rem;
   font-size: $font-size-base * 0.8;
   line-height: 1;
-  color: rgb(255,255,255);
+  color: rgb(255, 255, 255);
   text-align: center;
   white-space: nowrap;
   vertical-align: middle;
