--- a/app/styles/users.scss
+++ b/app/styles/users.scss
@@ -8,7 +8,8 @@ $user-header-margin-top-extra: 0px;
   flex-direction: column;
   position: relative;
 
-  margin: calc(#{$page-padding-v} * -1 + #{$user-header-margin-top-extra}) calc(#{$page-padding-h} * -1) 0;
+  margin: calc(#{$page-padding-v} * -1 + #{$user-header-margin-top-extra})
+    calc(#{$page-padding-h} * -1) 0;
   padding: $user-header-padding-v $user-header-padding-h;
 
   background-color: rgb(240, 240, 240);
@@ -129,7 +130,7 @@ $user-header-margin-top-extra: 0px;
   order: 2;
 }
 
-.user-header-worktime-balance-last-valid-timesheet{
+.user-header-worktime-balance-last-valid-timesheet {
   order: 0;
 }
 
@@ -218,8 +219,12 @@ $user-header-margin-top-extra: 0px;
 
 @media #{$lg-viewport} {
   .user-header {
-    margin: calc(#{$page-padding-v} * 1.25 * -1 + #{$user-header-margin-top-extra}) calc(#{$page-padding-h} * 1.25 * -1) 0;
-    padding: calc(#{$user-header-padding-v} * 1.25) calc(#{$user-header-padding-h} * 1.25);
+    margin: calc(
+        #{$page-padding-v} * 1.25 * -1 + #{$user-header-margin-top-extra}
+      )
+      calc(#{$page-padding-h} * 1.25 * -1) 0;
+    padding: calc(#{$user-header-padding-v} * 1.25)
+      calc(#{$user-header-padding-h} * 1.25);
   }
 
   .user-content {
@@ -237,8 +242,12 @@ $user-header-margin-top-extra: 0px;
 
 @media #{$xl-viewport} {
   .user-header {
-    margin: calc(#{$page-padding-v} * 1.5 * -1 + #{$user-header-margin-top-extra}) calc(#{$page-padding-h} * 1.5 * -1) 0;
-    padding: calc(#{$user-header-padding-v} * 1.5) calc(#{$user-header-padding-h} * 1.5);
+    margin: calc(
+        #{$page-padding-v} * 1.5 * -1 + #{$user-header-margin-top-extra}
+      )
+      calc(#{$page-padding-h} * 1.5 * -1) 0;
+    padding: calc(#{$user-header-padding-v} * 1.5)
+      calc(#{$user-header-padding-h} * 1.5);
   }
 
   .user-content {
