--- a/app/projects/template.hbs
+++ b/app/projects/template.hbs
@@ -12,7 +12,7 @@
         options=customers
         placeholder="Select customer..."
         searchField="name"
-        onchange=(action "handleCustomerChange")
+        onChange=(action "handleCustomerChange")
         selected=selectedCustomer
         allowClear=true
       as |customer|
@@ -26,7 +26,7 @@
         options=filteredProjects
         placeholder="Select project..."
         searchField="name"
-        onchange=(action "handleProjectChange")
+        onChange=(action "handleProjectChange")
         selected=selectedProject
         allowClear=true
         disabled=(not selectedCustomer)
