--- a/app/components/report-row/template.hbs
+++ b/app/components/report-row/template.hbs
@@ -1,35 +1,62 @@
-{{#task-selection disabled=(not editable) task=changeset.task as |t|}}
-  <div class="form-list-cell form-group {{if changeset.error.task 'has-error'}}">{{t.customer}}</div>
-  <div class="form-list-cell form-group {{if changeset.error.task 'has-error'}}">{{t.project}}</div>
-  <div class="form-list-cell form-group {{if changeset.error.task 'has-error'}}">{{t.task}}</div>
-{{/task-selection}}
+<form
+  class="form-list-row"
+  title={{this.title}}
+>
+  {{#task-selection disabled=(not this.editable) task=this.changeset.task as |t|}}
+    <div class="form-list-cell form-group {{if this.changeset.error.task 'has-error'}}">{{t.customer}}</div>
+    <div class="form-list-cell form-group {{if this.changeset.error.task 'has-error'}}">{{t.project}}</div>
+    <div class="form-list-cell form-group {{if this.changeset.error.task 'has-error'}}">{{t.task}}</div>
+  {{/task-selection}}
 
-<div class="form-list-cell form-group">
-  <input
-    type="text"
-    class="form-control comment-field"
-    placeholder="Comment"
-    name="comment"
-    value={{changeset.comment}}
-    disabled={{not editable}}
-    onchange={{action (mut changeset.comment) value='target.value'}}
-    data-test-report-comment
-  >
-  {{#if changeset.task.project.customerVisible }}
-      <CustomerVisibleIcon class="customer-visible-icon" />
-  {{/if}}
-</div>
-<div class="form-list-cell form-group">
-  {{sy-durationpicker-day data-test-report-duration disabled=(not editable) value=changeset.duration on-change=(action (mut changeset.duration))}}</div>
-<div class="form-list-cell form-group">
-  {{sy-checkbox data-test-report-review disabled=(not editable) checked=changeset.review on-change=(action (mut changeset.review)) label='Needs review'}}
-</div>
-<div class="form-list-cell form-group">
-  {{sy-checkbox data-test-report-not-billable disabled=(not editable) checked=changeset.notBillable on-change=(action (mut changeset.notBillable)) label='Not billable'}}
-</div>
-<div class="form-list-cell form-group">
-  {{#if editable}}
-    <button type="button" data-test-delete-report class="btn btn-danger" disabled={{report.verifiedBy.id}} {{action 'delete'}}>{{fa-icon 'trash'}}</button>
-    <button type="submit" data-test-save-report class="btn btn-primary" disabled={{or (not changeset.isDirty) (not changeset.isValid)}} {{action 'save'}}>{{fa-icon 'save'}}</button>
-  {{/if}}
-</div>
+  <div class="form-list-cell form-group">
+    <input
+      type="text"
+      class="form-control comment-field"
+      placeholder="Comment"
+      name="comment"
+      value={{this.changeset.comment}}
+      disabled={{not editable}}
+      onchange={{action (mut this.changeset.comment) value='target.value'}}
+      data-test-report-comment
+    >
+    {{#if changeset.task.project.customerVisible }}
+        <CustomerVisibleIcon class="customer-visible-icon" />
+    {{/if}}
+  </div>
+  <div class="form-list-cell form-group">
+    <SyDurationpickerDay
+      @disabled={{not this.editable}}
+      @value={{this.changeset.duration}}
+      @onChange={{fn (mut this.changeset.duration)}}
+      data-test-report-duration
+    />
+  </div>
+  <div class="form-list-cell form-group">
+    {{sy-checkbox data-test-report-review disabled=(not editable) checked=changeset.review on-change=(action (mut changeset.review)) label='Needs review'}}
+  </div>
+  <div class="form-list-cell form-group">
+    {{sy-checkbox data-test-report-not-billable disabled=(not editable) checked=changeset.notBillable on-change=(action (mut changeset.notBillable)) label='Not billable'}}
+  </div>
+  <div class="form-list-cell form-group">
+    {{#if editable}}
+      <button
+        data-test-delete-report
+        type="button"
+        class="btn btn-danger"
+        disabled={{report.verifiedBy.id}}
+        {{on "click" this.delete}}
+      >
+        {{fa-icon 'trash'}}
+      </button>
+      <button
+        data-test-save-report
+        type="submit"
+        class="btn btn-primary"
+        disabled={{or (not changeset.isDirty) (not changeset.isValid)}}
+        {{on "click" this.save}}
+      >
+        {{fa-icon 'save'}}
+      </button>
+    {{/if}}
+  </div>
+</form>
