--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -1,4 +1,6 @@
-{{tracking-bar data-test-tracking-bar}}
+<TrackingBar
+  data-test-tracking-bar
+/>
 <div>
   <div class="grid grid--12of12">
     <div class="grid-cell grid-cell-sm--6of12">
